--- a/ts-apps/package.json
+++ b/ts-apps/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile" : "tsc"
+    "compile": "tsc",
+    "build" : "webpack --watch"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0"
   }
 }
